--- a/covidVignette.Rmd
+++ b/covidVignette.Rmd
@@ -36,7 +36,7 @@ library(httr)
 library(lubridate)
 ```
 
-# Contact the Covid19 Data API
+# Functions to contact the Covid19 Data API
 
 To access the [Covid Data](https://documenter.getpostman.com/view/10808728/SzS8rjbc), we need to get a URL with the name of the table and attributes we want to pull from it.
 
@@ -47,6 +47,7 @@ Here is the base URL that I am going to use through out defining the functions.
 ```{r}
 base_url = "https://api.covid19api.com"
 ```
+
 
 I wrote one function for set up,Contacting Covid19 API via different endpoints.
 
@@ -111,7 +112,7 @@ confirmedCases <- function(country){
 confirmed_cases <- confirmedCases("united-states")
 ```
 
-# `deathCases`
+## `deathCases`
 
 This function interacts with the `By Country Total` endpoint with modification of status changed to deaths. This function returns a `data.frame` of daily deaths cases number by specific country during the specified dates (7/01/2020 - 09/30/2021). Users can select country to get different country dataset. I choose only 4 variables to display, which I am going to mainly use. Users can use the countryName table to find countries you want to look up. 
 
@@ -138,7 +139,7 @@ deathCases <- function(country){
 death_cases <- deathCases("united-states")
 ```
 
-# `recoveredCases`
+## `recoveredCases`
 
 This function interacts with the `By Country Total` endpoint with modification of status changed to recovered.This function returns a `data.frame` of daily recovered cases number by specific country during the specified dates (7/01/2020 - 09/30/2021). Users can select country to get different country dataset. I choose only 4 variables to display, which I am going to mainly use. Users can use the countryName table to find countries you want to look up.   
 
@@ -164,7 +165,6 @@ recoveredCases <- function(country){
 
 # 3.User(s) can select different countries.
 recovered_cases <- recoveredCases("united-states")
-
 ```
 
 ```{r}
@@ -172,7 +172,6 @@ recovered_cases <- recoveredCases("united-states")
 
 # 4.I created one dataset with two data.frame datasets by row merging.
 us_all_cases <- rbind(confirmed_cases, death_cases)
-
 ```
 
 ## `confirmedCasesState`
@@ -190,7 +189,8 @@ confirmedCasesState <- function(state_name){
                          "distrct of columbia", "puerto rico",
                          "Northern Mariana Islands", "Virgin Islands", 
                          "Rhode Island")
-  # For two or more words state name, user will type two words state name with space.   # I set it the function to insert %20 automatically using URLendoe().
+  # For two or more words state name, user will type two words state name with space.   
+  # I set it the function to insert %20 automatically using URLendoe().
   if (state_name %in% two_word_states){
     full_url = paste0(base_url,"/dayone/country/united-states/status/confirmed/live?province=",state_name)
   # This function will insert %20 in the space between two words or more state name.
@@ -212,7 +212,7 @@ confirmedCasesState <- function(state_name){
 # 5.User(s) can select different state names.
 nc_confirmedData <- confirmedCasesState("North Carolina")
 
-# 6.Last row was the sum of all confirmed case number of 55 states.
+# 5-1.Last row was the sum of all confirmed case number of 55 states.
 # I deleted the last row to keep the state level data only.
 nc_confirmedData1 <- nc_confirmedData %>% filter(row_number() <= n()-1)
 
@@ -224,11 +224,11 @@ This function interacts with the `Day One Live` endpoint with modification of st
 
 ```{r}
 deathsCasesState <- function(state_name){
-# There are state name with one words and more than two words. 
-# For one word state name, I set it up to be lower case.  
+  # There are state name with one words and more than two words. 
+  # For one word state name, I set it up to be lower case.  
   state_name <- tolower(state_name)
-# For two or more words state name, user will type two words state name with space. 
-# I set it the function to insert %20 automatically using URLendoe().
+  # For two or more words state name, user will type two words state name with space. 
+  # I set it the function to insert %20 automatically using URLendoe().
   two_word_states = list("new hampshire", "new jersey", "new mexico",
                          "new york","north carolina","north dakota",
                          "south carolina","south dakota", 
@@ -251,19 +251,19 @@ deathsCasesState <- function(state_name){
   return(covid_cases_by_states)
 }
 
-# 7.User(s) can select different state names.
+# 6.User(s) can select different state names.
 nc_deathData <- deathsCasesState("North Carolina")
 
-# 8.Last row was the sum of all confirmed case number of 55 states.
+# 6-1.Last row was the sum of all confirmed case number of 55 states.
 # I deleted the last row to keep the state level data only.
 nc_deathData1 <- nc_deathData %>% filter(row_number() <= n()-1)
 
 ```
 
 ```{r}
-# Data manipulation
+# Data loading
 
-# 9.I created this dataset with two data.frame datasets by row merging.
+# 7.I created this dataset with two data.frame datasets by row merging.
 nc_all_cases <- rbind(nc_confirmedData1, nc_deathData1)
 
 ```
@@ -292,7 +292,7 @@ liveConfirmedCases <- function(country){
   }
 }
 
-# 10.User(s) can select different countries.
+# 8.User(s) can select different countries.
 us_liveCases <- liveConfirmedCases("united-states")
 
 ```
@@ -315,13 +315,13 @@ dateManipulation <- function(dataset){
   return(dataset)
 }              
 
-# 11.data manipulation using `dateManipulation` function
+# 9.data manipulation using `dateManipulation` function
 # confirmed case data
 confirmed_month <- dateManipulation(confirmed_cases)
-# 12.US all cases (confirmed and death) data
+# 10.US all cases (confirmed and death) data
 us_all_cases_month <- dateManipulation(us_all_cases)
-# 13.NC all cases (confirmed and death) data
-nc_all_cases_month<- dateManipulation(nc_all_cases)
+# 11.NC all cases (confirmed and death) data
+nc_all_cases_month <- dateManipulation(nc_all_cases)
 
 ```
 
@@ -347,46 +347,91 @@ riskStatusManipulation <- function(dataset){
 ```
 
 ```{r}
-#need to change the name of file later.
+# I filtered date to 10/01/2021 to only view the date's information.
 us_newlive <- us_liveCases %>% filter(Date == "2021-10-01T00:00:00Z")
-# 14.US live data using riskStatusManipulation function.
+
+# 12.US live data using riskStatusManipulation function.
 us_newlive_risk <- riskStatusManipulation(us_newlive) %>% as_tibble()
 us_live_risk <- dateManipulation(us_newlive_risk)
 ```
 
 # Exploratory Data Analysis
 
-I want to begin with discussing about some summary statistics.
+I pulled the several data using functions I created interacting with endpoints. After using manipulation function and merging different dataset, I mainly selected four data sets for the exploratory analysis.
+ * `us_live_risk` (Confirmed and death cases by 55 states on 10/01/2021), 
+ * `nc_all_cases_month` (Confirmed cases in 101 NC Counties from 11/22/2020 to present), 
+ * `confirmed_month`(US confirmed cases from 07/01/2020 to 09/30/2021), 
+ * `us_all_cases_month`(US confirmed and death cases merged from 07/01/2020 to 09/30/2021).  
+
+Let's talk about the Covid-19 pandemic in the U.S and how the confirmed cases and death cases changes over time. In order to see the change patterns of both confirmed and death cases, I created scatterplot by date In the confirmed scatter plot, we see that the case increased rapidly at the end of 2020 and beginning of 2021 and then it slowed it down. However, it is rapidly increasing again since August of 2021. It may have been related to mask policy, vaccination, seasonal changes, but the fact is covid cases are increasing. Compared to confirmed cases, death cases seems increasing slowly in the plot. However, it is not really good comparison because the y axis scale is fitted to the confirmed cases. I will need to look at the confirmed plots and death plots separately. 
+
+```{r message=FALSE}
+# Scatter plot for US
+ggplot(data = us_all_cases_month, aes(x = Date, y = Cases))+
+  geom_point() + facet_wrap(~ Status) + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
+  ggtitle("Scatterplot of U.S. Cases by date") + geom_smooth(method = lm, color = "blue")  
+```
+
+Therefore, I wanted to see how the confirmed cases are increasing by every quarter using side by side box plot. Similar to the scatter plot of confirmed cases, the median line of 2021 quarter 1 is a lot higher than 2020 quater 4. Also, the interquartile range of 2020 quarter 4 is big, which means that during 2020 quarter 4, case numbers are rapidly increased. 
+ 
+
+```{r}
+# Box plot
+us_confirmed_states<- us_all_cases_month %>% filter(Status == "confirmed") 
+#Box plot for confirmed cases by time line.
+boxplot(Cases~Time_span,data=us_confirmed_states, main="Us Covid confirmed Cases Comparison by Time span using Box plot",xlab="Timespan", ylab="Cases",col=(c("blue","orange","green","gold","purple")))
+```
+
+Now, let's look at how death cases are increasing by every quarter. I also created side by side box plot for the deaths cases and death cases increased rapidly between last quarter of 2020 and first quarter of 2021. 
+
+```{r}
+#Setting the data set with only deaths status
+us_deaths_states<- us_all_cases_month %>% filter(Status == "deaths") #Box plot for death cases by timeline
+boxplot(Cases~Time_span,data=us_deaths_states, main="Us Covid death Cases Comparison by Time span using Box plot",xlab="Timespan", ylab="Cases",col=(c("blue","orange","green","gold","purple")))
+```
+ 
+Now, let's move down to the state level. I want to begin with discussing about some summary statistics. First, `us_bystate` summary table using `us_live_risk` data shows interesting information. The difference between minimum (269) and maximum (4,718,816) scores are extremely big. Therefore, I had to look at the median scores where the state with median score is located. Median score is 508494, which I cannot assume where majority of states are located. Mean and IQR score help me to understand where the majority states are located and states with minimum and maximum scores are less likely to observe. The next summary table explain better understanding current state data. 
 
 ```{r}
 #Summary table for us states
 us_bystate <- us_live_risk %>% summarise(Min = min(Confirmed), Max = max(Confirmed), Avg = mean(Confirmed), Med = median(Confirmed), IQR = IQR(Confirmed))
 us_bystate
-#summary by status(deaths vs confirmed)
-Summary_us_all <- us_all_cases_month %>% group_by(Status) %>% summarise(Avg = mean(Cases), Med = median(Cases), IQR = IQR(Cases)) 
-Summary_us_all
-#two categorical variables
-Summary_us_risk <- us_live_risk %>% group_by(RiskStatus) %>% summarise(Avg = mean(Confirmed), Med = median(Confirmed), IQR = IQR(Confirmed), Var = var(Confirmed)) 
-Summary_us_risk
-#two categorical variables
-Summary_us_DR <- us_live_risk %>% group_by(DeathRateStatus) %>% summarise(Avg = mean(Confirmed), Med = median(Confirmed), IQR = IQR(Confirmed), Var = var(Confirmed))
-Summary_us_DR
-
 ```
 
-I pulled the data using functions I created interacting with endpoints.
-
-First, let's look at the contingency table with confirmed cases Risk status and death rate status. Lower death rate risk states are also relatively in lower risk status. Similarly, high death rate risk states are also more likely in the high risk status. It is not too surprising results. However looking at the medium death rate risk status column, confrimed cases are almost evenly spread out. In other words, the group of states with moderate death rate does not show clear pattern. Therefore, I wanted to check the correlation relationship between the two variables.      
-
+`Summary_us_risk` table shows the average, median, and IQR score of each risk staus. I created a variable called RiskStatus based on the mean and median score. Five status set points of the number of confirmed cases are from "Very Low" (under 150,000 cases) to "Very High"(higher than 1,250,000 cases). Similar to first summary table,  this table also shows interesting results on very how status scores. The average score is significantly higher than median scores and IQR score in very high category is also large, which means that states with confirmed cases higher than 1,250,000 are more spread up, but majority are still round median scores.  
 
 ```{r}
-# Contingency table 
-#United Status
-usDeathRate_status <- table(us_live_risk$RiskStatus, us_live_risk$DeathRateStatus)
-usDeathRate_status
+#two categorical variables
+Summary_us_risk <- us_live_risk %>% group_by(RiskStatus) %>% summarise(Avg = mean(Confirmed), Med = median(Confirmed), IQR = IQR(Confirmed)) 
+Summary_us_risk
+
 ```
 
-Looking at the correlation r score and the scatter plot by death cases and confirmed cases shows the similar pattern with higher risky group of states and higher death rate risky state group.  
+`state_highrisk` contingency table shows where the top 10 most confirmed cases state are belong to in terms of their risk status. Nine out of 10 states are in very high risk status and North Carolina is one of the high risk status state. One thing we should remember is that this risk status is not based on the population. It straightly looking at the confirmed cases only. Therefore, if considering state population, risk status may change.     
+
+```{r}
+
+us_live_risk1 <- us_live_risk %>% arrange(desc(Confirmed))
+top10states <- us_live_risk1[1:10,]
+#Top10 states by risk status
+state_highrisk <- table(top10states$Province, top10states$RiskStatus)
+state_highrisk
+```
+
+While state_highrisk contingency table shows where each states belong to in terms of risk status category, bar plot shows the number of confirmed cases. We now know that California is the top state with the most confirmed cases followed by Texas, Florida, and New york.   
+
+```{r}
+#Bar plot for top 10 states
+
+ggplot(data=top10states, aes(x=Province, y=Confirmed)) +
+  geom_bar(stat="identity", fill="orange") +
+  labs(x = "State", title = "Top 10 US states on Confirmed caseS") + geom_text(aes(label=Confirmed), vjust=1.6, color="black", size=3.5) +
+  theme(axis.text.x = element_text(angle = 45, hjust=1))
+```
+
+Now, let's look at the both confirmed cases and deaths cases and it's relationship.
+Is deaths cases higher in the higher confirmed cases states? We cam use correlation score to see the relationship. Correlation score between confirmed cases and deaths cases is 0.975, which is really high close to 1. The scatter plot shows the pattern of the relationship as well. Based on the results, the top 10 confirmed case states are more like to show higher death cases. 
+ 
 
 ```{r message=FALSE}
 #correlation summary
@@ -399,37 +444,41 @@ ggplot(data = us_live_risk, aes(x = Confirmed, y = Deaths))+
   ggtitle("Scatterplot of correlation between death Cases and confirmed cases") + geom_smooth(method = lm, color = "blue")  
 ```
 
-```{r}
-
-us_live_risk1 <- us_live_risk %>% arrange(desc(Confirmed))
-us_live_risk2 <- us_live_risk1[1:10,]
-#Top10 states by death rate status
-state_deathrate <- table(us_live_risk2$Province, us_live_risk2$DeathRateStatus)
-state_deathrate
-```
-
-
-## Graphical Summaries
-
-```{r message=FALSE}
-#Scatter plot US COVID-19 confirmed cases by time
-ggplot(data = confirmed_month, aes(x = Date, y = Cases))+
-  geom_point() + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
-  ggtitle("Scatterplot of Confirmed Covid Cases by Confirmed Covid Cases") + geom_smooth(method = lm, color = "blue")  
-```
-
+Below bar plot shows the top 10 states on deaths cases. As the prediction of the correlation between confirmed cases and death cases, California is again the top state showing the highest deaths cases followed by Texas, Florida, and New York. Interestingly, Death cases in New York is similar to Florida, which infers that death rate in New York is higher. Let's move on to see the death rate of the top 10 states. 
 
 ```{r}
-#Subsetting data by specific date and confirmed status
-top_states<- nc_all_cases_month %>% filter(Status == "confirmed") %>% filter(Date == "2021-10-01") %>% arrange(desc(Cases))
-top_10counties <- top_states[1:10,] #Only using top 10 confirmed counties
-#Bar plot for top 10 counties
-ggplot(data=top_10counties, aes(x=City, y=Cases)) +
+# Subsetting top 10 states of deaths cases
+us_live_death1 <- us_live_risk %>% arrange(desc(Deaths))
+top10statesdeath <- us_live_death1[1:10,]
+
+#Bar plot for 10 10 states by death cases
+ggplot(data=top10statesdeath, aes(x=Province, y=Deaths)) +
   geom_bar(stat="identity", fill="orange") +
-  labs(x = "City", title = "Top 10 Counties on Confirmed case") + geom_text(aes(label=Cases), vjust=1.6, color="black", size=3.5) +
+  labs(x = "State", title = "Top 10 US states on Deaths cases") + geom_text(aes(label=Deaths), vjust=1.6, color="black", size=3.5) +
   theme(axis.text.x = element_text(angle = 45, hjust=1))
+
+```
+`top10statesDeathRate` table shows top 10 states with death rates. Surprisingly, California and Texas is not one the top 10 list, but New Jersey, Massachusetts, and New York states ranked top 3. This results shows more dynamics of confirmed cases and deaths cases and the death rates are not always going by the number of cases. Then, it will be interesting to see the relationship between deathrate and confirmed cases. I created `DeathRateStatus` variable to see how many states are in high, medium low death rate group. Therefore, instead of directly comparing the two numbers, I would like to use categorical variables (RiskStatus and DeathRateStatus) to see how many states are belong to where in the contingency table.   
+ 
+```{r}
+# Subsetting top 10 states of death rate
+us_live_deathrate <- us_live_risk %>% arrange(desc(DeathRate))
+top10statesDeathRate <- us_live_deathrate[1:10,] %>% select (Province, DeathRate)
+kable(top10statesDeathRate)
+
 ```
 
+
+When looking at the contingency table with confirmed cases Risk status and death rate status, it still shows the consistent results. The very high risk group in terms of confirmed cases continue to in the medium and high death rate group. Similarly, very low  and low risk group in terms of the confirmed cases shows low and medium death rate group.       
+
+
+```{r}
+# Contingency table 
+#United Status
+usDeathRate_status <- table(us_live_risk$RiskStatus, us_live_risk$DeathRateStatus)
+usDeathRate_status
+```
+This bar plot shows the contingency table more visually. You will see that the low death rate states are mainly in medium to low and very low risk status (low confirmed cases) and high death rate states are in medium to high and very high risk status(high confirmed cases). 
 ```{r}
 #Bar plot of risk status in 55 states
 
@@ -438,41 +487,22 @@ ggplot(data = us_live_risk, aes(x=RiskStatus)) +
 ```
 
 
-```{r message=FALSE}
-# Scatter plot for US
-ggplot(data = us_all_cases_month, aes(x = Date, y = Cases))+
-  geom_point() + facet_wrap(~ Status) + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
-  ggtitle("Scatterplot of U.S. Cases by date") + geom_smooth(method = lm, color = "blue")  
-```
+Lastly, I wanted to see how confirmed cases and death cases are changing in wake county. Looking at the multi-panel scatter plot, confirmed scatterplot reveals that beginning of 2021 the cases increased rapidly and then the cases are increasing fast again since September. Again, it is hard to look at the pattern of deaths cases, so I will need to create separate scatter plot for the deaths cases.  
+
 
 ```{r message=FALSE}
 # subsetting rows by two counties
 Wake_cases <- nc_all_cases_month %>% filter(City=="Wake") 
-Mecklenburg_cases <- nc_all_cases_month %>% filter(City=="Mecklenburg") 
 
 # Scatter plots for wake and Meck country
 ggplot(data = Wake_cases, aes(x = Date, y = Cases))+
   geom_point() + facet_wrap(~ Status) + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
   ggtitle("Scatterplot of  Wake county Cases by date") + geom_smooth(method = lm, color = "blue")  
 
-ggplot(data = Mecklenburg_cases, aes(x = Date, y = Cases))+
-  geom_point() + facet_wrap(~ Status) + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
-  ggtitle("Scatterplot of  Mecklenburg county Cases by date") + geom_smooth(method = lm, color = "blue") 
-
 ```
 
-```{r}
-# Box plot
-us_confirmed_states<- us_all_cases_month %>% filter(Status == "confirmed") 
-#Box plot for confirmed cases by time line.
-boxplot(Cases~Time_span,data=us_confirmed_states, main="Us Covid confirmed Cases Comparison by Time span using Box plot",xlab="Timespan", ylab="Cases",col=(c("blue","orange","green","gold","purple")))
-```
-```{r}
-#Setting the data set with only deaths status
-us_deaths_states<- us_all_cases_month %>% filter(Status == "deaths") #Box plot for death cases by timeline
-boxplot(Cases~Time_span,data=us_deaths_states, main="Us Covid death Cases Comparison by Time span using Box plot",xlab="Timespan", ylab="Cases",col=(c("blue","orange","green","gold","purple")))
-```
-
+These histograms can also show how confirmed and deaths cases are changing slowly or quickly by frequency of same case numbers.   
+in other words, in confirmed histogram, there are most 80,000s cases. So the time period when the confirmed cases are in their 80,000 are most frequent and changed slowly during earlier month of this year. However, confirm cases are rapidly increasing again seeing that the frequencies of cases of smaller ranges are less likely to happen.  In deaths histogram, death cases were stagnated when they were between 730 and 750. In other words, death case is slowly increasing later months of 2021.  It is good to know that in the midst of fast increasing of confirmed cases, the deaths cases are slowing down in Wake county.  
 
 ```{r, message=FALSE}
 # Histogram plot
@@ -486,4 +516,11 @@ ggplot(ncst_confirmed_cases, aes(Cases)) + geom_histogram(color = "blue", fill =
 ggplot(ncst_deaths_cases, aes(Cases)) + geom_histogram(color = "blue", fill = "lightblue")
 
 ```
+# Wrap-Up
+
+In this vignette, I built several functions to interact with some of the COVID19 API’s endpoints to retrieve data for the exploratory analysis. I used tables, numerical summaries, and four different types of graphs to explain what I found. With an analysis, I found that Covid confirm cases are still increasing with death cases, but there are variations between states in the U.S. Sadly, North Carolina is one of the top 10 states of confirmed cases. Also, confirmed cases are increasing fast in wake county. 
+
+I selectively focused on the US cases in this vignette because US is top country of all the confirmed cases, but it will be very interesting to see how other countries are doing navigating functions I created here. 
+
+
 
