--- a/covidVignette.Rmd
+++ b/covidVignette.Rmd
@@ -32,6 +32,7 @@ library(jsonlite)
 library(knitr)
 library(httr)
 library(tidytext)
+library(lubridate)
 ```
 
 # JSON Data
@@ -79,8 +80,10 @@ country_Name <- function(){
   countrylist1 <- as_tibble(data.frame(Country = countrylist$Country, Slug = countrylist$Slug))
   return(countrylist1)
 }
+
+countryName <- country_Name()
+countryName
 ```
-countryName <- countryName()
 
 ## `Confirmed Cases by different contries` from March 1st, 2020 to September 21st, 2021
 
@@ -88,10 +91,11 @@ countryName <- countryName()
 ```{r}
 get_confirmed_cases <- function(country){
      if(country %in% countryName$Slug){
-  full_url = paste0(base_url,"/total/country/",country,"/status/confirmed?from=2020-03-01T00:00:00Z&to=2021-09-21T00:00:00Z")
+  full_url = paste0(base_url,"/total/country/",country,"/status/confirmed?from=2020-03-01T00:00:00Z&to=2021-09-30T00:00:00Z")
   confirmed_cases_text = content(GET(url=full_url),"text")
   confirmed_cases_json = fromJSON(confirmed_cases_text)
-  return(confirmed_cases_json)
+      covid_confirmed_cases <- confirmed_cases_json %>% select(Country, Cases, Status, Date) #%>% rename(ConfirmedCases =  Cases) 
+  return(covid_confirmed_cases)
      }
         else {
       message <- paste("ERROR: Argument for country was not found in the Slug.", 
@@ -99,15 +103,8 @@ get_confirmed_cases <- function(country){
       stop(message)
     }
 }
+
 ```
-
-
-
-confirmed <- get_confirmed_cases()
-
-confirmed
-
-
 
 ## `Death Cases by different contries` from March 1st, 2020 to September 21st, 2021
 
@@ -116,10 +113,11 @@ confirmed
 ```{r}
 get_deaths_cases <- function(country){
     if(country %in% countryName$Slug){
-  full_url = paste0(base_url,"/total/country/",country,"/status/deaths?from=2020-03-01T00:00:00Z&to=2021-09-21T00:00:00Z")
+  full_url = paste0(base_url,"/total/country/",country,"/status/deaths?from=2020-03-01T00:00:00Z&to=2021-09-30T00:00:00Z")
   deaths_cases_text = content(GET(url=full_url),"text")
   deaths_cases_json = fromJSON(deaths_cases_text)
-  return(deaths_cases_json)
+       covid_deaths_cases <- deaths_cases_json  %>% select(Country, Cases, Status, Date) #%>% rename(DeathsCases =  Cases) 
+  return(covid_deaths_cases)
     }
         else {
       message <- paste("ERROR: Argument for country was not found in the Slug.", 
@@ -129,14 +127,6 @@ get_deaths_cases <- function(country){
 }
 ```
 
-
-deaths <- get_deaths_cases("india")
-
-deaths
-
-get_deaths_cases("canada")
-
-
 ## `Recovered Cases by different contries` from March 1st, 2020 to September 21st, 2021
 
 #This function interacts with the `By Country Total` endpoint, but modified the status as recovered.
@@ -144,10 +134,11 @@ get_deaths_cases("canada")
 ```{r}
 get_recovered_cases <- function(country){
   if(country %in% countryName$Slug){
-  full_url = paste0(base_url,"/total/country/", country,"/status/recovered?from=2020-03-01T00:00:00Z&to=2021-09-21T00:00:00Z")
+  full_url = paste0(base_url,"/total/country/", country,"/status/recovered?from=2020-03-01T00:00:00Z&to=2021-09-30T00:00:00Z")
   recovered_cases_text = content(GET(url=full_url),"text")
   recovered_cases_json = fromJSON(recovered_cases_text)
-  return(recovered_cases_json)
+       covid_recovered_cases <- recovered_cases_json  %>% select(Country, Cases, Status, Date) #%>% rename(RecoveredCases =  Cases)
+  return(covid_recovered_cases)
   }
       else {
       message <- paste("ERROR: Argument for country was not found in the Slug.", 
@@ -157,9 +148,6 @@ get_recovered_cases <- function(country){
 }
 ```
 
-
-recovered <- get_recovered_cases("united-states")
-recovered
 
 ## `U.S.A cases by state`
 
@@ -184,33 +172,50 @@ get_cases_bystate <- function(state_name){
   return(covid_cases_by_states)
 }
 
-stateCases <- get_cases_bystate("North Carolina")
-stateCases
+nc_stateData <- get_cases_bystate("North Carolina")
+nc_stateData 
 ```
-%>% select(Country, NewConfirmed, TotalConfirmed, NewDeaths, TotalDeaths, Date) %>% as_tibble()
-```{r}
+
+## `Summary cases by Countries`
+
+
 covid_summary_cases <- function(){
    full_url = paste0(base_url,"/summary")
    covid_summary <- GET(url=full_url)
    covid_cases_summary <- fromJSON(rawToChar(covid_summary$content))
-   covid_cases_summary1 <- covid_cases_summary$Countries %>% select(Country, NewConfirmed, TotalConfirmed, NewDeaths, TotalDeaths, Date) 
+   covid_cases_summary1 <- data.frame(covid_cases_summary$Countries) 
+   #covid_cases_summary2 <- data.frame(covid_cases_summary1)
    return(covid_cases_summary1)
 }
 
-covidSummary <- covid_summary_cases()
-covidSummary
-```
-   covid_cases_summary1 <- covid_cases_summary$Countries
+covidSum <- covid_summary_cases()
+covidSum
+
+
+```{r}
+covid_summary_cases <- function(){
+   full_url = paste0(base_url,"/summary")
+   covid_summary_text <- content(GET(url=full_url),"text")
+   covid_cases_summary_json <- fromJSON(covid_summary_text)
+   covid_cases_summary1 <- data.frame(covid_cases_summary_json$Countries)  
+   covid_cases_summary2 <- as_tibble(covid_cases_summary1)
+   return(covid_cases_summary2)
+}
+
+covidSum <- covid_summary_cases()
+covidSum
+``` 
 
 
 
 ```{r}
 get_live_cases <- function(country){
        if(country %in% countryName$Slug){
-   full_url = paste0(base_url,"/live/country/",country,"/status/confirmed/date/2021-08-31T00:00:00Z")
+   full_url = paste0(base_url,"/live/country/",country,"/status/confirmed/date/2021-07-01T00:00:00Z")
     covid_cases_live_text = content(GET(url=full_url),"text")
     covid_cases_live_json = fromJSON(covid_cases_live_text)
-  return(covid_cases_live_json)
+      covid_state_cases <- covid_cases_live_json  %>% select(Country, Province, Confirmed, Deaths, Active, Date) #%>% rename(RecoveredCases =  Cases)
+      return(covid_state_cases)
        }
       else {
       message <- paste("ERROR: Argument for country was not found in the Slug.", 
@@ -219,38 +224,170 @@ get_live_cases <- function(country){
     }
 }
 
-liveCase <- get_live_cases("united-states")
-liveCase
-
+us_liveCases <- get_live_cases("united-states")
+us_liveCases
 ```
-URLencode()
-//Replace space with %20 for url to understand
-$new = str_replace(' ', '%20', $your_string);
+
 
 ```{r}
-countryName <- country_Name()
+#As of July 28,2012 CDC covid case map
+#https://twitter.com/cdcgov/status/1288609081696169990
 
-confirmed <- get_confirmed_cases("canada")
+#we can create a function that will manipulate our data to prepare for data summaries and visualization
+newcolumnData <- function(dataset){
+  dataset <- dataset %>% 
+            mutate("DeathRate"= (Deaths/Confirmed)*100, 
+                   "DeathRateStatus"= if_else(DeathRate > 10, "serious",
+                                  if_else(DeathRate > 5, "high", 
+                                          if_else(DeathRate >2, "medium", "low"))), 
+                   "RiskStatus" = if_else(Confirmed > 174973, "Veryhigh",
+                                    if_else(Confirmed > 82530, "high", 
+                                      if_else(Confirmed > 39337, "mediumhigh", 
+                                        if_else(Confirmed > 18725, "medium", 
+                                          if_else(Confirmed > 6173, "mediumlow","low")))))
+                                          
+                                  )            
 
-deaths <- get_deaths_cases("india")
+  return(dataset)
+}
+```
+```{r}
 
-recovered <- get_recovered_cases("united-states")
+new_live_07_28_2021 <- us_liveCases %>% filter(Date == "2021-07-28T00:00:00Z")
 
-stateCases <- get_cases_bystate("North Carolina")
+newcolumnData1 <- newcolumnData(new_live_07_28_2021)
+newcolumnData1
+```
 
-caseSum <- get_cases_summary() 
 
-covidSummary <- covid_summary_cases()
+```{r}
 
-caseWorld <- get_cases_world()
+#https://ourworldindata.org/grapher/biweekly-confirmed-covid-19-cases
+#we can create a function that will manipulate our data to prepare for data summaries and visualization
+newAddData_state <- function(dataset){
+  dataset1 <- dataset %>% 
+            mutate("TotalDeathRate"= (TotalDeaths/TotalConfirmed)*100, 
+                   "TotalDeathRateStatus"= if_else(TotalDeathRate > 10, "serious",
+                                  if_else(TotalDeathRate > 5, "high", 
+                                          if_else(TotalDeathRate >2, "medium", "low"))), 
+                   "Active" = (TotalConfirmed-TotalDeaths), 
+                   "RiskStatus" = if_else(TotalConfirmed > 100000, "Veryhigh",
+                                    if_else(TotalConfirmed > 50000, "high", 
+                                      if_else(TotalConfirmed > 10000, "mediumhigh", 
+                                        if_else(TotalConfirmed > 1000, "medium", 
+                                          if_else(TotalConfirmed > 100, "mediumlow","low")))))
+            )
 
-country_liveCase <- get_live_cases("united-states")
- 
+  return(dataset1)
+}
+
+
+
+
+newCovidSummary <- newAddData_state(covidSum)
+newCovidSummary
+```
+
+
+
+
+```{r}
+#countryName <- country_Name()
+
+indiaConfirmed <- get_confirmed_cases("india")
+
+usConfirmed <- get_confirmed_cases("united-states")
+brazilConfirmed <- get_confirmed_cases("brazil")
+ukConfirmed <- get_confirmed_cases("united-kingdom")
+russiaConfirmed <- get_confirmed_cases("russia")
+
+indiaDeaths <- get_deaths_cases("india")
+
+usDeaths <- get_deaths_cases("united-states") 
+
+inRecovered <- get_recovered_cases("india")
+usRecovered <- get_recovered_cases("united-states")
+
+#stateCases <- get_cases_bystate("North Carolina")
+
+#covidSummary <- covid_summary_cases()
+
+#us_liveCase <- get_live_cases("united-states")
+
+in_liveCase <- get_live_cases("india") 
 
 ```
 # Exploratory Data Analysis
 
 ## Contigency Tables/ Numerical Summaries
+
+```{r}
+# combining three datasets
+
+#confirm_subset <- usConfirmed %>% select(Country, Cases,Status, Date)
+#death_subset <- usDeaths %>% select(Country, Cases,Status)
+#recover_subset <- usRecovered %>% select(Country, Cases,Status) 
+five_confirm <- rbind(usConfirmed, brazilConfirmed, indiaConfirmed, ukConfirmed, russiaConfirmed)
+
+
+five_com1 <- five_confirm %>% filter(Date == "2021-09-30T00:00:00Z")
+five_com1
+
+five_confirm_table <- table(five_com1$Country)
+five_confirm_table
+
+```
+
+
+
+
+
+
+```{r}
+# Contingency table
+
+#Worldwide
+
+TotalDeathRate_status <- table(newCovidSummary$TotalDeathRateStatus) 
+
+TotalDeathRate_status1 <- TotalDeathRate_status[c(4,1,3,2)]
+
+kable(TotalDeathRate_status1) #col.names = c("Total DeathRate Status", "Count"))
+
+
+
+TotalRisk_status <- table(newCovidSummary$RiskStatus) 
+
+TotalRisk_status1 <- TotalRisk_status[c(5,1,4,3,2)]
+
+kable(TotalRisk_status1) #col.names = c("Risk Status", "Count"))
+```
+
+
+
+```{r}
+# Contingency table 
+#United Status
+usDeathRate_status <- table(newcolumnData1$RiskStatus, newcolumnData1$DeathRateStatus)
+kable(usDeathRate_status)
+```
+
+```{r}
+Summarydata_World <- newCovidSummary %>% group_by(RiskStatus) %>% summarise(Avg = mean(TotalConfirmed), Med = median((TotalConfirmed), IQR = IQR(TotalConfirmed), Var = var(TotalConfirmed)) )
+
+Summarydata_World
+```
+```{r}
+newCovidSummary %>% group_by(TotalDeathRateStatus) %>% summarise(Avg = mean(TotalConfirmed), Med = median(TotalConfirmed))
+```
+```{r}
+newCovidSummary %>% group_by(TotalDeathRateStatus) %>% summarise(Avg = mean(TotalDeathRate), Med = median(TotalDeathRate), Var = var(TotalDeathRate), IQR = IQR(TotalDeathRate))
+```
+
+```{r}
+cor(newCovidSummary$TotalConfirmed, newCovidSummary$TotalDeaths)
+
+```
 
 ```{r}
 # kable(stateCases)
@@ -276,10 +413,22 @@ ggplot(data=top_10_state_09_30_2021, aes(x=Province, y=Active)) +
 
 
   geom_text(aes(label=Cases), vjust=1.6, color="black", size=3.5)+   theme_minimal()+ ggtitle("Top 10 North Carolina Cities Confirmed Covid Cases on September 23rd, 2021.")
+```{r}
+ggplot(data=newCovidSummary, aes(x=RiskStatus)) +
+  geom_bar(aes(fill = as.factor(TotalDeathRateStatus))) + labs(x = " Risk Status", title = "Bar plot of Risk status in 192 countries") + theme(axis.text.x = element_text(angle = 45, hjust=1)) + scale_fill_discrete(name = "DeathRate Status")
+```
+
+
+
+
+```{r}
+ggplot(data=newcolumnData1, aes(x=RiskStatus)) +
+  geom_bar(aes(fill = as.factor(DeathRateStatus))) + labs(x = " Risk Status", title = "Bar plot of Risk status in 52 states in the U.S") + theme(axis.text.x = element_text(angle = 45, hjust=1)) + scale_fill_discrete(name = "DeathRate Status")
+```
 
 ```{r}
 # Bar plot
-top_country<- covidSummary %>% arrange(desc(TotalConfirmed))
+top_country<- newCovidSummary %>% arrange(desc(TotalConfirmed))
 top_10_country <- top_country[1:10,]
 
 ggplot(data=top_10_country, aes(x=Country, y=TotalConfirmed)) +
@@ -289,7 +438,7 @@ ggplot(data=top_10_country, aes(x=Country, y=TotalConfirmed)) +
 ```
 ```{r}
 # Bar plot
-top_country<- covidSummary %>% arrange(desc(NewDeaths))
+top_country<- newCovidSummary %>% arrange(desc(NewDeaths))
 top_10_country <- top_country[1:10,]
 
 ggplot(data=top_10_country, aes(x=Country, y=NewDeaths)) +
@@ -303,7 +452,7 @@ ggplot(data=top_10_country, aes(x=Country, y=NewDeaths)) +
   
 ```{r}
 # Bar plot
-top_city_09_30_2021 <- stateCases %>% filter(Date == "2021-09-30T00:00:00Z") %>% arrange(desc(Cases))
+top_city_09_30_2021 <- nc_stateData %>% filter(Date == "2021-09-30T00:00:00Z") %>% arrange(desc(Cases))
 top_10_city_09_30_2021 <- top_city_09_30_2021[1:10,]
 
 ggplot(data=top_10_city_09_30_2021, aes(x=City, y=Cases)) +
@@ -321,15 +470,16 @@ stateCases
 
 # Histogram
 ```{r}
-top_country<- covidSummary %>% arrange(desc(TotalConfirmed))
+top_country<- newCovidSummary %>% arrange(desc(TotalConfirmed))
 top_20_country <- top_country[1:20,]
 ```
 ```{r}
-ggplot(covidSummary, aes(x=NewDeaths)) + geom_histogram(color="orange2", fill="red", size = 2, binwidth=40)+geom_vline(aes(xintercept=mean(NewDeaths)),color="blue", linetype="dashed", size=1) + labs(x = "New Death Case", title = "Histogram of new death cases today: 192 countries")
+ggplot(newCovidSummary, aes(x=NewDeaths)) + geom_histogram(color="orange2", fill="red", size = 1, binwidth=100)+geom_vline(aes(xintercept=mean(NewDeaths)),color="blue", linetype="dashed", size=1) + labs(x = "New Death Case", title = "Histogram of new death cases today: 192 countries")
 
 #Blue line is the mean line.
 
 ```
+
 
 
 
@@ -339,3 +489,69 @@ ggplot(top_city_09_30_2021, aes(x=Cases)) + geom_histogram(color="darkblue",fill
 
 #Blue line is the mean line.
 ```
+
+```{r}
+# Box plot
+us_subset <- usConfirmed %>% select(Country, Cases,Status)
+in_subset <- indiaConfirmed %>% select(Country, Cases,Status)
+us_in <- rbind(us_subset, in_subset)
+
+boxplot(Cases~Country,data=us_in, main="United States and India Covid Cases Comparison using Box plot",xlab="Country", ylab="Cases",col=(c("gold","darkgreen")))
+```
+```{r}
+
+uscaselive <- us_liveCases  %>% 
+  select(Country, Province, Active, Date) 
+incaselive <- in_liveCase %>%
+  select(Country, Province, Active, Date)
+uslive_inlive <- rbind(uscaselive, incaselive )
+
+boxplot(Active~Country,data=uslive_inlive, main="United States and India Covid live Cases Comparison using Box plot",xlab="Country", ylab="Active",col=(c("gold","darkgreen")))
+
+
+```
+```{r}
+# Box plot
+Summary_world <- newCovidSummary %>% select(Country, TotalConfirmed, RiskStatus)
+
+boxplot(TotalConfirmed~RiskStatus,data=Summary_world, main="World Covid Cases Box plot",
+   xlab="RiskStatus", ylab="TotalConfirmed",col=(c("darkgreen")))
+```
+
+```{r}
+# Scatter plot
+covid_cases_by_states2 <- nc_stateData
+
+covid_cases_by_states2 <- aggregate(list(Cases=covid_cases_by_states2$Cases),
+                              by=list(Date=cut(as.POSIXct(covid_cases_by_states2$Date),"month")),sum)
+
+ggplot(data = covid_cases_by_states2, aes(x = Date, y = Cases))+
+  geom_point() + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
+  ggtitle("Scatterplot of Confirmed Covid Cases in North Carolina Cities from November 2020 to September 2021") 
+```
+
+
+```{r}
+# Scatter plot country summary
+ggplot(data = newCovidSummary, aes(x = TotalConfirmed, y = TotalDeaths))+
+  geom_point() + theme(axis.text.x = element_text(angle = 45,hjust=1)) + 
+  ggtitle("Scatterplot of Confirmed Covid Cases by Death Covid Cases") + geom_smooth(method = lm, color = "blue")  
+
+
+```
+
+
+
+
+# Scatter plot - U.S. live case
+
+us_covid_cases <- liveCase
+
+us_covid_cases <- aggregate((activeCases = liveCase$Active), 
+                            by = list(Date=cut(as.POSIXct(liveCase$Date), "month")), sum)
+
+us_covid_cases
+
+
+stateCovidCase <- stateCases
+stateCovidCase <- aggregate(stateCovidCase$Cases by = list()
